--- a/templates/show_images.html
+++ b/templates/show_images.html
@@ -6,6 +6,7 @@
     {% for image in images %}
     <tr>
         <td>
+        <a href={{ image }} download><button>Download</button></a>
         <a href={{ image }}><img src={{ image }} alt={{ image }} ></a>
         </td>
     </tr>
